--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    //LiveData and ViewModel implementation
+    implementation "android.arch.lifecycle:extensions:1.1.0"
     //Databinding for Kotlin
     kapt 'com.android.databinding:compiler:3.0.1'
     //Room implementation
     implementation "android.arch.persistence.room:runtime:1.0.0"
     kapt "android.arch.persistence.room:compiler:1.0.0"
+
+    compile 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    // RXJava
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
